                                 Muldis::D
---------------------------------------------------------------------------

2008-06-xx  Darren Duncan <perl@DarrenDuncan.net>

    * Muldis::D version 0.33.0 is released on CPAN as
    Muldis-D-0.33.0.tar.gz.

    * New file versions are: D.pm 0.33.0 and Types_Catalog.pod 0.29.0 and
    Routines.pod 0.24.2 and Basics.pod 0.24.0.  The other pre-existing
    versioned files are unchanged.

    * (Basics.pod)  Added a short paragraph under TYPE SYSTEM that
    clarifies Muldis D does subtyping using "specialization by constraint"
    (not "by extension"), using those very terms.

    * (Basics.pod)  Rewrote a portion of the "Scalar Types" subsection of
    TYPE SYSTEM to bring it up to date concerning the nature of possreps,
    possrep maps, and particularly of the nature of what operators are or
    aren't built-in to types, and what are automatically system-defined.
    Also made a few other small changes in Basics or TYPE SYSTEM.

    * (Basics.pod, Types_Catalog.pod)  Specified that all possrep names of
    all scalar types in a common hierarchy (under the same root type) must
    have distinct names regardless of whether they share values, so to keep
    diamond inheritence more simple and deterministic.

    * (Types_Catalog.pod)  Added initial complement of catalog types that
    define controls for mounting and unmounting depots, in the new main pod
    section "TYPES FOR DEFINING MOUNT CONTROLS"; this consists of the 2 new
    types "Cat.MountControl(Cat|Set)".  This fills in one of the arguably
    very few remaining gaps in essential language functionality.  Some
    standard customizations per depot mount include readonly vs updateable,
    temporary or not, create on mount or not; most customizations are left
    to implementation-specific 'details' though, such as file names or
    authentication credentials.

    * (Basics.pod, Types_Catalog.pod, Routines.pod)  Added new routine kind