@@ -9,7 +9,7 @@ Muldis D general purpose routines
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Routines version 0.24.1.
+This document is Muldis::D::Core::Routines version 0.24.2.
 
 =head1 PREFACE
 
