@@ -9,7 +9,7 @@ Muldis D catalog-defining data types
 
 =head1 VERSION
 
-This document is Muldis::D::Core::Types_Catalog version 0.28.0.
+This document is Muldis::D::Core::Types_Catalog version 0.29.0.
 
 =head1 PREFACE
 
