@@ -1,7 +1,7 @@
                                  Muldis::D
 ---------------------------------------------------------------------------
 
-2008-06-xx  Darren Duncan <perl@DarrenDuncan.net>
+2008-06-04  Darren Duncan <perl@DarrenDuncan.net>
 
     * Muldis::D version 0.33.0 is released on CPAN as
     Muldis-D-0.33.0.tar.gz.
@@ -72,7 +72,9 @@
     globals.  Also updated the definitions of 'type_constraint' and
     'transition_constraint' to conform to recent catalog formalizations;
     the first one now always just takes the single 'topic' parameter.  And
-    all constraints must not unconditionally result in Bool:false.
+    all constraints must not unconditionally result in Bool:false.  Note
+    that the catalog still doesn't define how to apply state or transition
+    constraints to variables; such an update is pending.
 
     * (Types_Catalog.pod)  Added new type 'Cat.ConstraintSet' which defines
     a set of named generalized constraints (type or state or transition
